[project]
name = "image-classified"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "opencv-python-headless>=4.13.0.90",
    "pillow>=11.3.0",
    "streamlit>=1.48.1",
    "tensorflow>=2.20.0",
    "ultralytics>=8.4.5",
]
